# learn-python

behave/: main.py
behave/features/: tests.feature
behave/features/steps/: tests.py
demo/: README.md  pyproject.toml
demo/src/learn_patch/: patch_demo.py
demo/src/pytest_demo/: calculator.py
demo/tests/: test_patch.py
demo/tests/pytest_demo/: test_calculator.py  test_yield.py
fastapi/: main.py  readme.md
nlp/: 713-Le-rugby.words.json  713-Le-rugby.words.vtt  g.py  grok1.py  grok2.py  intro-spacy.md  output.vtt  readme.md  semantic_vtt_generator.py  split.md  test_grok3.py  whisper_semantic_vtt.py  whisper_semchunk_vtt.py
nlp/spacy/: chunker.py  clause.py  sentence.md  test_02_word_vec.py  test_chunker.py  test_intro.py  test_split.py
nlp/spacy/claude/: BEFORE_AFTER_COMPARISON.md  BILINGUAL_SUMMARY.py  BILINGUAL_VERIFICATION.md  FINAL_BILINGUAL_ANSWER.md  FINAL_SUMMARY.txt  LANGUAGE_COMPATIBILITY_REPORT.txt  SOLUTION_SUMMARY.md  TEST_UPDATES_QUICK_REFERENCE.md  TEST_UPDATES_SUMMARY.md  analysis.py  analyze_although.py  analyze_and_raining.py  analyze_roots.py  check_markers.py  clause-sendtence.md  clause_detector.py  debug_and_token.py  debug_deps.py  debug_french.py  debug_took.py  readme.md  test_both_languages.py  test_clause-example.py  test_clause_detector.py  test_comprehensive.py  test_final_solution.py  test_get_clause_span.py  test_overlap.py
nlp/spacy/gemini/: nlp_utils.py  test_nlp_utils.py
tools/conda/: conda.md
tools/fastapi_rq/: README.md  job.py  main.py  pyproject.toml  worker.py
tools/uv/: main.py  pyproject.toml  uv.md
(+2 files in other folders)
